--- a/views/default/index.ejs
+++ b/views/default/index.ejs
@@ -5,17 +5,17 @@
   <!-- Meta Tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="<%= settings.website.description %> | Powered by HolaClient.">
+  <meta name="description" content="<%= settings.website.description %> | .">
   <meta name="keywords" content="HClient, HolaClient, Hosting, HolaLLC, Freemium Minecraft Hosting, <%= settings.name %>, Cloud, Minecraft, Servers, Free Servers, Hostings that uses HolaClient">
   <meta name="author" content="HolaClient">
   <meta name="copyright" content="<%= settings.name %>">
   <meta property="og:type" content="website">
   <meta property="og:title" content="<%= settings.name %>">
-  <meta property="og:description" content="<%= settings.website.description %> | Powered by HolaClient.">
+  <meta property="og:description" content="<%= settings.website.description %> | .">
   <meta property="og:image" content="<%= settings.logo.url %>">
   <meta name="twitter:card" content="<%= settings.logo.url %>">
   <meta name="twitter:title" content="<%= settings.name %>">
-  <meta name="twitter:description" content="<%= settings.website.description %> | Powered by HolaClient.">
+  <meta name="twitter:description" content="<%= settings.website.description %> | .">
   <meta name="twitter:image" content="<%= settings.logo.url %>">
   <meta name="twitter:image:src" content="<%= settings.logo.url %>">
   <!-- End Meta Tags -->
@@ -381,7 +381,7 @@
               </script> <%= settings.name %></span>
           </div>
           <div onclick="location.href='https://github.com/HolaClient/HolaClient'" class="col-span-2 md:col-span-2 lg:col-span-2 flex justify-end">
-            <span>Powered by HolaClient</span>
+            <span></span>
           </div>
         </div>
       </div>
