--- a/views/default/features/onboarding.ejs
+++ b/views/default/features/onboarding.ejs
@@ -5,19 +5,19 @@
   <!-- Normal Meta Tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="<%= settings.website.description %> | Powered by HolaClient.">
+  <meta name="description" content="<%= settings.website.description %> | .">
   <meta name="keywords" content="HClient, HolaClient, Hosting, HolaLLC">
   <meta name="author" content="HolaLLC">
   <meta name="copyright" content="HolaLLC">
   <!-- Facebook Meta Tags -->
   <meta property="og:type" content="dashboard">
   <meta property="og:title" content="<%= settings.name %>">
-  <meta property="og:description" content="<%= settings.website.description %> | Powered by HolaClient.">
+  <meta property="og:description" content="<%= settings.website.description %> | .">
   <meta property="og:image" content="<%= settings.logo.url %>">
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="<%= settings.logo.url %>">
   <meta name="twitter:title" content="<%= settings.name %>">
-  <meta name="twitter:description" content="<%= settings.website.description %> | Powered by HolaClient.">
+  <meta name="twitter:description" content="<%= settings.website.description %> | .">
   <meta name="twitter:image" content="<%= settings.logo.url %>">
   <meta name="twitter:image:src" content="<%= settings.logo.url %>">
   <meta property="og:image" content="<%= settings.logo.url %>">
